Closed
Bug 199024
Opened 23 years ago
Closed 23 years ago
Smooth mouse scrolling in IFRAME also scrolls main window
Categories
(SeaMonkey :: General, defect, P2)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: samh1974, Assigned: roc)
References
Details
(Whiteboard: [fix])
Attachments
(1 file)
|
2.67 KB,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.4a) Gecko/20030324
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.4a) Gecko/20030324
Mouse-wheel scrolling in an IFRAME also scrolls the main window as well.
Reproducible: Always
Steps to Reproduce:
1. Go to any site with an IFRAME, e.g. bugzilla
2. Mouse wheel in the IFRAME that comes up when you search for bugs
Actual Results:
The main window scrolls as well
Expected Results:
The IFRAME should scroll only
I think this broke when smooth scrolling was introduced in 2003032408
| Assignee | ||
Comment 2•23 years ago
|
||
That would be surprising. We haven't changed how mousewheel events are delivered.
| Assignee | ||
Comment 3•23 years ago
|
||
I see the bug. It only happens when smooth scrolling is enabled.
Assignee: asa → roc+moz
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Reporter | ||
Comment 4•23 years ago
|
||
sorry, should've been clearer about that
Updated•23 years ago
|
OS: Windows 2000 → All
Comment 5•23 years ago
|
||
The News iFrame on http://www.k10k.net is a good example of this
Comment 6•23 years ago
|
||
*** Bug 200567 has been marked as a duplicate of this bug. ***
Comment 7•23 years ago
|
||
*** Bug 201007 has been marked as a duplicate of this bug. ***
| Assignee | ||
Updated•23 years ago
|
Status: NEW → ASSIGNED
Keywords: regression
Priority: -- → P2
Summary: Mouse scrolling in IFRAME also scrolls main window → Smooth mouse scrolling in IFRAME also scrolls main window
Whiteboard: [fix]
| Assignee | ||
Comment 8•23 years ago
|
||
The old way of detecting a failed scroll operation doesn't work anymore. This
way does.
| Assignee | ||
Comment 9•23 years ago
|
||
Comment on attachment 120542 [details] [diff] [review]
fix
Another easy one for ya, bz :-)
Attachment #120542 -
Flags: superreview?(bzbarsky)
Attachment #120542 -
Flags: review?(bzbarsky)
Updated•23 years ago
|
Attachment #120542 -
Flags: superreview?(bzbarsky)
Attachment #120542 -
Flags: superreview+
Attachment #120542 -
Flags: review?(bzbarsky)
Attachment #120542 -
Flags: review+
| Assignee | ||
Comment 10•23 years ago
|
||
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 11•23 years ago
|
||
very cool. will this fix be reflected in the 4/16 or 4/17 nightly?
| Reporter | ||
Comment 12•23 years ago
|
||
Maybe someone fixed bug 199471 too while they were in the IFRAME code?
| Assignee | ||
Comment 13•23 years ago
|
||
This has absolutely nothing to do with bug 199471.
This fix will show up in tonight's builds.
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•