Bug 199024. The old way of detecting whether a scroll happened or not in DoWheelScroll doesn't work with smooth scrolling. r+sr=bzbarsky